--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
     "@tailwindcss/forms": "^0.5.10",
+    "@tanstack/react-query": "^5.90.6",
     "apexcharts": "^4.1.0",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.13.1",
     "chart": "^0.1.2",
     "chart.js": "^4.5.0",
     "classnames": "^2.5.1",
@@ -36,6 +38,7 @@
     "react-flatpickr": "^3.10.13",
     "react-helmet-async": "^2.0.5",
     "react-router": "^7.1.5",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.1.0",
     "simplebar-react": "^3.3.0",
     "swiper": "^11.2.3",
